headers/sqlucode.h

#define SQLColAttributes    SQLColAttributesW
#define SQLSpecialColumns    SQLSpecialColumnsW
#define SQLStatistics        SQLStatisticsW
#define SQLTables        SQLTablesW
#define SQLDriverConnect    SQLDriverConnectW
#define SQLBrowseConnect    SQLBrowseConnectW
#define SQLColumnPrivileges    SQLColumnPrivilegesW
#define SQLForeignKeys        SQLForeignKeysW
#define SQLNativeSql        SQLNativeSqlW
#define SQLProcedureColumns    SQLProcedureColumnsW
#define SQLProcedures        SQLProceduresW