headers/sql.h

#define SQL_FETCH_PRIOR                4
/*
 *  SQLGetInfo - SQL_CURSOR_COMMIT_BEHAVIOR
 */
#define SQL_CB_DELETE                0
#define SQL_CB_CLOSE                1
#define SQL_CB_PRESERVE                2
#define SQL_FD_FETCH_PRIOR            0x00000008L
#define SQL_SCCO_OPT_ROWVER            0x00000004L
/*
 *  Depreciated ODBC 1.0 function - Use SQLBindParameter
 */
SQLRETURN SQL_API SQLSetParam (
    SQLHSTMT          StatementHandle,
    SQLUSMALLINT      ParameterNumber,
    SQLSMALLINT          ValueType,
    SQLSMALLINT          ParameterType,
    SQLULEN          LengthPrecision,
    SQLSMALLINT          ParameterScale,
    SQLPOINTER          ParameterValue,
    SQLLEN        * StrLen_or_Ind);