headers/sqlext.h

#define SQL_DESC_ARRAY_STATUS_PTR        21
#define SQL_CONCUR_ROWVER            3
    /*
     *  SQLExtendedFetch - rgfRowStatus
     */
#define SQL_ROW_SUCCESS                0
#define SQL_ROW_DELETED                1
#define SQL_ROW_UPDATED                2
#define SQL_ROW_NOROW                3
#define SQL_ROW_ADDED                4
#define SQL_ROW_ERROR                5
#define SQL_ROW_SUCCESS_WITH_INFO        6
#define SQL_ROW_PROCEED                0
#define SQL_ROW_IGNORE                1
#define SQL_PARAM_SUCCESS            0
#define SQL_PARAM_SUCCESS_WITH_INFO        6
#define SQL_PARAM_ERROR                5
#define SQL_PARAM_UNUSED            7
#define SQL_PARAM_DIAG_UNAVAILABLE        1
#define SQL_PARAM_PROCEED            0
#define SQL_PARAM_IGNORE            1
    /*
     *  SQLForeignKeys - UPDATE_RULE/DELETE_RULE
     */
#define SQL_CASCADE                0
#define SQL_RESTRICT                1
#define SQL_SET_NULL                2
#define SQL_NO_ACTION                3
#define SQL_SET_DEFAULT                 4
#define SQL_INITIALLY_DEFERRED            5
#define SQL_INITIALLY_IMMEDIATE            6
#define SQL_NOT_DEFERRABLE            7
    /*
     *  SQLBindParameter - fParamType
     *  SQLProcedureColumns - COLUMN_TYPE
     */
#define SQL_PARAM_TYPE_UNKNOWN            0
#define SQL_PARAM_INPUT                1
#define SQL_PARAM_INPUT_OUTPUT            2
#define SQL_RESULT_COL                3
#define SQL_PARAM_OUTPUT            4
#define SQL_RETURN_VALUE            5
    /*
     *   SQLProcedures - PROCEDURE_TYPE
     */
#define SQL_PT_UNKNOWN                0
#define SQL_PT_PROCEDURE            1
#define SQL_PT_FUNCTION                2
    /*
     *  SQLSetParam to SQLBindParameter conversion
     */
#define SQL_PARAM_TYPE_DEFAULT            SQL_PARAM_INPUT_OUTPUT
#define SQL_SETPARAM_VALUE_MAX            (-1L)
    /*
     *  SQLStatistics - fAccuracy
     */
#define SQL_QUICK                0
#define SQL_ENSURE                1
    /*
     *  SQLStatistics - TYPE
     */
#define SQL_TABLE_STAT                0
#define SQL_ALL_CATALOGS            "%"
#define SQL_ALL_SCHEMAS                "%"
#define SQL_ALL_TABLE_TYPES            "%"
    /*
     *  SQLSpecialColumns - PSEUDO_COLUMN
     */
#define SQL_PC_NOT_PSEUDO            1
    /*
     *  Deprecated defines from prior versions of ODBC
     */
#define SQL_DATABASE_NAME            16
#define SQL_FD_FETCH_PREV            SQL_FD_FETCH_PRIOR
#define SQL_FETCH_PREV                SQL_FETCH_PRIOR
#define SQL_CONCUR_TIMESTAMP            SQL_CONCUR_ROWVER
#define SQL_SCCO_OPT_TIMESTAMP            SQL_SCCO_OPT_ROWVER
#define SQL_CC_DELETE                SQL_CB_DELETE
#define SQL_CR_DELETE                SQL_CB_DELETE
#define SQL_CC_CLOSE                SQL_CB_CLOSE
#define SQL_CR_CLOSE                SQL_CB_CLOSE
#define SQL_CC_PRESERVE                SQL_CB_PRESERVE
#define SQL_CR_PRESERVE                SQL_CB_PRESERVE
#define SQL_FETCH_RESUME            7
#define SQL_SCROLL_FORWARD_ONLY            0L
#define SQL_SCROLL_KEYSET_DRIVEN        (-1L)
#define SQL_SCROLL_DYNAMIC            (-2L)
#define SQL_SCROLL_STATIC            (-3L)
    SQLRETURN SQL_API SQLBulkOperations(
        SQLHSTMT          StatementHandle,
        SQLSMALLINT          Operation);
    SQLRETURN SQL_API SQLDescribeParam(
        SQLHSTMT          hstmt,
        SQLUSMALLINT      ipar,
        SQLSMALLINT*         pfSqlType,
        SQLULEN*         pcbParamDef,
        SQLSMALLINT*         pibScale,
        SQLSMALLINT*         pfNullable);
    SQLRETURN SQL_API SQLExtendedFetch(
        SQLHSTMT          hstmt,
        SQLUSMALLINT      fFetchType,
        SQLLEN          irow,
        SQLULEN*         pcrow,
        SQLUSMALLINT*     rgfRowStatus);
    SQLRETURN SQL_API SQLMoreResults(
        SQLHSTMT          hstmt);
    SQLRETURN SQL_API SQLNumParams(
        SQLHSTMT        hstmt,
        SQLSMALLINT*         pcpar);
    SQLRETURN SQL_API SQLParamOptions(
        SQLHSTMT          hstmt,
        SQLULEN          crow,
        SQLULEN*         pirow);
    SQLRETURN SQL_API SQLBindParameter(
        SQLHSTMT          hstmt,
        SQLUSMALLINT      ipar,
        SQLSMALLINT          fParamType,
        SQLSMALLINT          fCType,
        SQLSMALLINT          fSqlType,
        SQLULEN          cbColDef,
        SQLSMALLINT          ibScale,
        SQLPOINTER          rgbValue,
        SQLLEN          cbValueMax,
        SQLLEN*         pcbValue);