sql.py


        ################################################################################
        ####SQLExtendedFetch - rgfRowStatus#############################################
        ################################################################################
        self.SQL_ROW_SUCCESS = 0
        self.SQL_ROW_DELETED = 1
        self.SQL_ROW_UPDATED = 2
        self.SQL_ROW_NOROW = 3
        self.SQL_ROW_ADDED = 4
        self.SQL_ROW_ERROR = 5
        self.SQL_ROW_SUCCESS_WITH_INFO = 6
        self.SQL_ROW_PROCEED = 0
        self.SQL_ROW_IGNORE = 1

        ################################################################################
        ####SQL_DESC_ARRAY_STATUS_PTR###################################################
        ################################################################################
        self.SQL_PARAM_SUCCESS = 0
        self.SQL_PARAM_SUCCESS_WITH_INFO = 6
        self.SQL_PARAM_ERROR = 5
        self.SQL_PARAM_UNUSED = 7
        self.SQL_PARAM_DIAG_UNAVAILABLE = 1

        self.SQL_PARAM_PROCEED = 0
        self.SQL_PARAM_IGNORE = 1

        ################################################################################
        ####SQLForeignKeys - UPDATE_RULE/DELETE_RULE####################################
        ################################################################################
        self.SQL_CASCADE = 0
        self.SQL_RESTRICT = 1
        self.SQL_SET_NULL = 2

        self.SQL_NO_ACTION = 3
        self.SQL_SET_DEFAULT = 4

        ################################################################################
        ####SQLForeignKeys - DEFERABILITY###############################################
        ################################################################################
        self.SQL_INITIALLY_DEFERRED = 5
        self.SQL_INITIALLY_IMMEDIATE = 6
        self.SQL_NOT_DEFERRABLE = 7

        ################################################################################
        ####SQLBindParameter - fParamType###############################################
        ####SQLProcedureColumns - COLUMN_TYPE###########################################
        ################################################################################
        self.SQL_PARAM_TYPE_UNKNOWN = 0
        self.SQL_PARAM_INPUT = 1
        self.SQL_PARAM_INPUT_OUTPUT = 2
        self.SQL_RESULT_COL = 3
        self.SQL_PARAM_OUTPUT = 4
        self.SQL_RETURN_VALUE = 5

        ################################################################################
        #### SQLProcedures - PROCEDURE_TYPE#############################################
        ################################################################################
        self.SQL_PT_UNKNOWN = 0
        self.SQL_PT_PROCEDURE = 1
        self.SQL_PT_FUNCTION = 2

        ################################################################################
        ####SQLSetParam to SQLBindParameter conversion##################################
        ################################################################################
        self.SQL_PARAM_TYPE_DEFAULT = self.SQL_PARAM_INPUT_OUTPUT
        self.SQL_SETPARAM_VALUE_MAX = -1

        ################################################################################
        ####SQLStatistics - fAccuracy###################################################
        ################################################################################
        self.SQL_QUICK = 0
        self.SQL_ENSURE = 1

        ################################################################################
        ####SQLStatistics - TYPE########################################################
        ################################################################################
        self.SQL_TABLE_STAT = 0

        ################################################################################
        ####SQLTables###################################################################
        ################################################################################
        self.SQL_ALL_CATALOGS = "%"
        self.SQL_ALL_SCHEMAS = "%"
        self.SQL_ALL_TABLE_TYPES = "%"

        ################################################################################
        ####SQLSpecialColumns - PSEUDO_COLUMN###########################################
        ################################################################################
        self.SQL_PC_NOT_PSEUDO = 1

        ################################################################################
        ####Deprecated defines from prior versions of ODBC##############################
        ################################################################################
        self.SQL_DATABASE_NAME = 16
        self.SQL_FD_FETCH_PREV = self.SQL_FD_FETCH_PRIOR
        self.SQL_FETCH_PREV = self.SQL_FETCH_PRIOR
        self.SQL_CONCUR_TIMESTAMP = self.SQL_CONCUR_ROWVER
        self.SQL_SCCO_OPT_TIMESTAMP = self.SQL_SCCO_OPT_ROWVER
        self.SQL_CC_DELETE = self.SQL_CB_DELETE
        self.SQL_CR_DELETE = self.SQL_CB_DELETE
        self.SQL_CC_CLOSE = self.SQL_CB_CLOSE
        self.SQL_CR_CLOSE = self.SQL_CB_CLOSE
        self.SQL_CC_PRESERVE = self.SQL_CB_PRESERVE
        self.SQL_CR_PRESERVE = self.SQL_CB_PRESERVE
        self.SQL_FETCH_RESUME = 7
        self.SQL_SCROLL_FORWARD_ONLY = 0
        self.SQL_SCROLL_KEYSET_DRIVEN = -1
        self.SQL_SCROLL_DYNAMIC = -2
        self.SQL_SCROLL_STATIC = -3

        ################################################################################
        ####Level 1 function prototypes#################################################
        ################################################################################
        if hasattr(self.ODBC_DRIVER, "SQLDriverConnect"):
            self.ODBC_DRIVER.SQLDriverConnect.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLDriverConnect.argtypes = (self.SQLHDBC, self.SQLHWND, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), self.SQLUSMALLINT,)
            self.SQLDriverConnect = self.ODBC_DRIVER.SQLDriverConnect
        else:
            self.SQLDriverConnect = self.UnimplementedSQLFunction

        ################################################################################
        ####Level 2 function prototypes#################################################
        ################################################################################
        if hasattr(self.ODBC_DRIVER, "SQLBrowseConnect"):
            self.ODBC_DRIVER.SQLBrowseConnect.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLBrowseConnect.argtypes = (self.SQLHDBC, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLBrowseConnect = self.ODBC_DRIVER.SQLBrowseConnect
        else:
            self.SQLBrowseConnect = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLBulkOperations"):
            self.ODBC_DRIVER.SQLBulkOperations.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLBulkOperations.argtypes = (self.SQLHSTMT, self.SQLSMALLINT,)
            self.SQLBulkOperations = self.ODBC_DRIVER.SQLBulkOperations
        else:
            self.SQLBulkOperations = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLColAttributes"):
            self.ODBC_DRIVER.SQLColAttributes.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLColAttributes.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, self.SQLUSMALLINT, self.SQLPOINTER, self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLLEN),)
            self.SQLColAttributes = self.ODBC_DRIVER.SQLColAttributes
        else:
            self.SQLColAttributes = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLColumnPrivileges"):
            self.ODBC_DRIVER.SQLColumnPrivileges.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLColumnPrivileges.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT,)
            self.SQLColumnPrivileges = self.ODBC_DRIVER.SQLColumnPrivileges
        else:
            self.SQLColumnPrivileges = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLDescribeParam"):
            self.ODBC_DRIVER.SQLDescribeParam.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLDescribeParam.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLULEN), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLDescribeParam = self.ODBC_DRIVER.SQLDescribeParam
        else:
            self.SQLDescribeParam = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLExtendedFetch"):
            self.ODBC_DRIVER.SQLExtendedFetch.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLExtendedFetch.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, self.SQLLEN, ctypes.POINTER(self.SQLULEN), ctypes.POINTER(self.SQLUSMALLINT),)
            self.SQLExtendedFetch = self.ODBC_DRIVER.SQLExtendedFetch
        else:
            self.SQLExtendedFetch = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLForeignKeys"):
            self.ODBC_DRIVER.SQLForeignKeys.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLForeignKeys.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT,)
            self.SQLForeignKeys = self.ODBC_DRIVER.SQLForeignKeys
        else:
            self.SQLForeignKeys = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLMoreResults"):
            self.ODBC_DRIVER.SQLMoreResults.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLMoreResults.argtypes = (self.SQLHSTMT,)
            self.SQLMoreResults = self.ODBC_DRIVER.SQLMoreResults
        else:
            self.SQLMoreResults = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLNativeSql"):
            self.ODBC_DRIVER.SQLNativeSql.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLNativeSql.argtypes = (self.SQLHDBC, ctypes.POINTER(self.SQLCHAR), self.SQLINTEGER, ctypes.POINTER(self.SQLCHAR), self.SQLINTEGER, ctypes.POINTER(self.SQLINTEGER),)
            self.SQLNativeSql = self.ODBC_DRIVER.SQLNativeSql
        else:
            self.SQLNativeSql = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLNumParams"):
            self.ODBC_DRIVER.SQLNumParams.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLNumParams.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLNumParams = self.ODBC_DRIVER.SQLNumParams
        else:
            self.SQLNumParams = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLParamOptions"):
            self.ODBC_DRIVER.SQLParamOptions.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLParamOptions.argtypes = (self.SQLHSTMT, self.SQLULEN, ctypes.POINTER(self.SQLULEN),)
            self.SQLParamOptions = self.ODBC_DRIVER.SQLParamOptions
        else:
            self.SQLParamOptions = self.UnimplementedSQLFunction
